# epflhackathon

./: Cargo.toml  README.md
file-sharer-app/: Cargo.toml
file-sharer-app/src/: main.rs
file-sharer-frontend/: package-lock.json  package.json
file-sharer-frontend/src/: App.html  App.js
