[package]
name = "file-sharer-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipfs-api = "0.17"
elliptic-curve = {version = "0.13", features=["std"]}
rand_core = "0.6"
hex = "0.4"
anyhow = "1.0"
base64 = "0.21"

# zk-Risc0 dependencies
risc0-zkvm = { version = "0.20.1", features = ["prove", "verify"] }
risc0-build = "0.20.1"
risc0-zkp = "0.20.1"

# Assume "simple-token" and "simple-identity" are local or custom crates:
simple_token = { path = "../simple-token" }
simple_identity = { path = "../simple-identity" }